--- a/prova.html
+++ b/prova.html
@@ -20,7 +20,7 @@
 	</h3>
 	<p>The editing works both ways, with live <em>visual</em> feedback. Write some markup code on the right, and it will appear in the left
 		editor.
-		<strong>Very good.</strong>
+		<strong>Very good.</strong> Test.
 	</p>
 </main>
 </body>
