--- a/picocss.html
+++ b/picocss.html
@@ -63,11 +63,11 @@
 				<tfoot>
 				<tr>
 					<th scope="col">#</th>
-					<td scope="col">Total</td>
-					<td scope="col">Total</td>
-					<td scope="col">Total</td>
-					<td scope="col">Total</td>
-					<td scope="col">Total</td>
+					<td>Total</td>
+					<td>Total</td>
+					<td>Total</td>
+					<td>Total</td>
+					<td>Total</td>
 				</tr>
 				</tfoot>
 			</table>
